--- a/Box2D/Testbed/index.html
+++ b/Box2D/Testbed/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript">
 
     function boot(args) {
-      if (!false && window.ts) {
+      if (!false) {
         System.config({
           transpiler: "typescript",
           typescriptOptions: {},
