--- a/Box2D/HelloWorld/index.html
+++ b/Box2D/HelloWorld/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
 
     function boot(args) {
-      if (!false && window.ts) {
+      if (!false) {
         System.config({
           transpiler: "typescript",
           typescriptOptions: {},
