add fallback links for node_modules

--- a/Box2D/HelloWorld/index.html
+++ b/Box2D/HelloWorld/index.html
@@ -3,7 +3,9 @@
     <meta charset="utf-8" />
     <title>Box2D Hello World</title>
     <script type="text/javascript" src="../../node_modules/systemjs/dist/system.src.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.41/system.src.js"></script>
     <script type="text/javascript" src="../../node_modules/typescript/lib/typescript.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/typescript/2.1.1/typescript.js"></script>
     <script type="text/javascript">
 
     function boot(args) {
