--- a/Box2D/Testbed/index.html
+++ b/Box2D/Testbed/index.html
@@ -6,10 +6,10 @@
     @font-face { font-family: DroidSans; src: url('Data/DroidSans.ttf'); }
     body { font-family: DroidSans; font-size: 15px; }
     </style>
-    <script type="text/javascript" src="../../node_modules/systemjs/dist/system.src.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.41/system.src.js"></script>
-    <script type="text/javascript" src="../../node_modules/typescript/lib/typescript.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/typescript/2.1.1/typescript.js"></script>
+    <!-- <script type="text/javascript" src="../../node_modules/systemjs/dist/system.js"></script> -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.21.0/system.js"></script>
+    <!-- <script type="text/javascript" src="../../node_modules/typescript/lib/typescript.js"></script> -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/typescript/2.7.2/typescript.js"></script>
     <script type="text/javascript">
 
     function boot(args) {
