update dependencies; use flyover system.ts

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Box2D</title>
-    <script src="https://unpkg.com/systemjs@6.7.0/dist/system.js"></script>
+		<script src="https://flyover.github.io/system.ts/build/system.js"></script>
     <script type="text/javascript">
     window.addEventListener('load', function(event) {
       const args = window.location.search.substring(1).split('&').filter(v => !!v); // args from window location
