--- a/unit-test/index.html
+++ b/unit-test/index.html
@@ -9,7 +9,7 @@
         }
       }
     </script>
-    <script src="https://unpkg.com/systemjs@6.7.0/dist/system.js"></script>
+		<script src="https://flyover.github.io/system.ts/build/system.js"></script>
     <script type="text/javascript">
 
     function boot(args) {
